--- a/src/Wrap.Packager/App.xaml
+++ b/src/Wrap.Packager/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="AppPackage.App"
+﻿<Application x:Class="Wrap.Packager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AppPackage"
+             xmlns:local="clr-namespace:Wrap.Packager"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
