--- a/src/Wrap.Packager/MainWindow.xaml
+++ b/src/Wrap.Packager/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="AppPackage.MainWindow"
+﻿<Window x:Class="Wrap.Packager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AppPackage"
+        xmlns:local="clr-namespace:Wrap.Packager"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
